--- a/.github/workflows/kubescape.yaml
+++ b/.github/workflows/kubescape.yaml
@@ -20,6 +20,7 @@ jobs:
         outputFile: results
 
     - name: Upload Kubescape scan results to Github Code Scanning
-      uses: github/codeql-action/upload-sarif@v2
+      uses: github/codeql-action/upload-sarif@v3
+      if: success() || failure()
       with:
         sarif_file: results.sarif
