--- a/.github/workflows/kubescape.yaml
+++ b/.github/workflows/kubescape.yaml
@@ -17,7 +17,7 @@ jobs:
       continue-on-error: true
       with:
         format: sarif
-        outputFile: results
+        outputFile: results.sarif
 
     - name: Upload Kubescape scan results to Github Code Scanning
       uses: github/codeql-action/upload-sarif@v3
