--- a/.github/workflows/scan.yaml
+++ b/.github/workflows/scan.yaml
@@ -1,30 +1,25 @@
-name: Suggest autofixes with Kubescape for PR by reviews
+name: Kubescape scanning
 on:
-  pull_request_target:
-
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 jobs:
-  kubescape-fix-pr-reviews:
+  kubescape:
     runs-on: ubuntu-latest
     permissions:
-      pull-requests: write
-
+      actions: read
+      contents: read
+      security-events: write
     steps:
     - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
-        ref: ${{github.event.pull_request.head.ref}}
-        repository: ${{github.event.pull_request.head.repo.full_name}}
-    - name: Get changed files
-      id: changed-files
-      uses: tj-actions/changed-files@v35
     - uses: kubescape/github-action@main
+      continue-on-error: true
       with:
-        files: ${{ steps.changed-files.outputs.all_changed_files }}
-        fixFiles: true
-        format: "sarif"
-    - name: PR Suggester according to SARIF file
-      if: github.event_name == 'pull_request_target'
-      uses: HollowMan6/sarif4reviewdog@v1.0.0
+        format: sarif
+        outputFile: results
+
+    - name: Upload Kubescape scan results to Github Code Scanning
+      uses: github/codeql-action/upload-sarif@v2
       with:
-        file: 'results.sarif'
-        level: warning
+        sarif_file: results.sarif
