--- a/Deployments/qtorrent.yaml
+++ b/Deployments/qtorrent.yaml
@@ -23,7 +23,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: qbittorrent-deployment
+  name: qbittorrent
 spec:
   replicas: 1
   selector:
