--- a/.github/workflows/scan.yaml
+++ b/.github/workflows/scan.yaml
@@ -18,6 +18,7 @@ jobs:
       with:
         format: sarif
         outputFile: results
+        failedThreshold: 50
 
     - name: Upload Kubescape scan results to Github Code Scanning
       uses: github/codeql-action/upload-sarif@v2
