--- a/Deployments/qtorrent.yaml
+++ b/Deployments/qtorrent.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: config-torrent
+  name: config-torren
 spec:
   accessModes:
     - ReadWriteOnce
